# Erdtree

./: CMakeLists.txt  README.md  conanfile.py
config/: config.yaml
example/: CMakeLists.txt  DummyFunc.cpp
include/: LogAdapter.hpp
include/Erdtree/: ConfigManager.hpp  DaemonController.hpp  HookManager.hpp  PosixWrapper.hpp  ProcessManager.hpp  SharedMemoryManager.hpp  SignalManager.hpp
src/: ConfigManager.cpp  DaemonController.cpp  HookManager.cpp  ProcessManager.cpp  SharedMemoryManager.cpp  SignalManager.cpp  main.cpp
